--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Kontakt</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="impressum.html">Impressum</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -65,7 +68,7 @@
             <h1 class="text-uppercase font-logo">
               <strong>Natürlich Entspannt</strong>
             </h1>
-            <hr  style="background: #8CCE40;">
+            <hr class="lg">
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5">hier eine Kurzbeschreibung einfügen</p>
@@ -355,75 +358,14 @@
       </div>
     </section>
 
-    <section class="bg-primary" id="impressum">
+    <section class="bg-primary pt-3 pb-1" id="impressum">
       <div class="container">
-        <h2 class="section-heading text-dark text-center">Impressum</h2>
-        <hr class="dark my-4">
-        <h4>Herausgeber</h4>
-        <p class="mb-4">
-          Praxis für ???</br>
-          Jennifer Ludwig</br>
-          Windmühlenstraße 12</br>
-          04425 Taucha</br></br>
-          <i class="fas fa-phone text-primary"></i> +49 000 0000</br>
-          <i class="fas fa-mobile-alt text-primary"></i> +49 000 0000</br>
-          <i class="fas fa-at text-primary"></i> jennyludwig79@gmail.com</br>
-          <i class="fas fa-globe text-primary"></i> natürlich-entspannt.de</br></br>
-          Berufsbezeichnung: Entspannungstherapeutin</br>
-          Steuernummer: 0/0/0
-        </p>
-
-        <h3>Rechtliche Hinweise</h3>
-        <h4>Haftungsausschluss</h4>
-        <h5>Haftung für Inhalte</h5>
-        <p class="mb-4">
-          Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
-          Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Alle Angebote sind freibleibend und unverbindlich. Der Autor behält es sich ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.
-        </p>
-        <h5>Haftung für Links</h5>
-        <p class="mb-4">
-          Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
-        </p>
-        <h4>Urheberrecht</h4>
-        <p class="mb-4">
-          Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
-        </p>
-        <h4>Datenschutz</h4>
-        <p class="mb-4">
-          Diese Datenschutzerklärung gilt für das Internet-Angebot natürlich-entspannt.de. Diese ist für die Inhalte dieses Internet-Angebots verantwortlich.
-        </p>
-        <h5>Datenverarbeitung im Auftrag</h5>
-        <p class="mb-4">
-          Dieses Internet-Angebot wird im Wege der Autragsverarbeitung von dem T-Online-Dienst der Deutschen Telekom als technischem Dienstleister vorgehalten. Dabei findet keine über das in dieser Erklärung dargestellte Maß hinauisgehende Speicherung und Verarbeitung personenbezogener Nutzungsdaten statt.
-        </p>
-        <h5>Erhebung von Nutzungsdaten/ Nutzungsanalyse</h5>
-        <p class="mb-4">
-          Beim Zugriff auf unser Internetangebot erfassen wir folgende Daten in einer Protokolldatei:
-          <ul>
-            <li>IP-Adresse in anonymisierter Form (jede IP wird nach dem Zufallsprinzip transformiert)</li>
-            <li>Zeitpunkt des Zugriffs</li>
-            <li>aufgerufene Seite bzw. Name der abgerufenen Datei (URL)</li>
-            <li>Status-Informationen (z.B. Fehlercode)</li>
-            <li>übertragene Datenmenge</li>
-            <li>Browser-Informationen (genutzter Web-Browser, Bertiebssystem, Spacheinstellung ect.)</li>
-          </ul>
-          Die Daten werden ausschließlich für statistische Zwecke genutzt. Eine Weitergabe an Dritte erfolgt nicht. Dises Internetangebot verwendet keine Techniken, die darauf abzielen, das Zugriffsverhalten einzelner Nutzer auszuwerten. Personenbezogene Nutzungsprofile werden nicht erstellt.
-        <h5>Cookies</h5>
-        <p class="mb-4">
-          In bestimmten Fällen werden so genannte temporäre Cookies verwendet. Diese enthalten keine personenbezogenen Daten und werden nach Ablauf der Sitzung mit dem Schließen Ihres Web-Browsers automatisch gelöscht.
-        </p>
-        <h5>Erhebung personenbezogener Daten in Online-Formularen</h5>
-        <p class="mb-4">
-          Soweit wir Sie im Rahmen dieses Angebots um die Angabe personenbezogener Daten bitten (z.B. Name, Anschrift oder E-Mail-Adresse), sagen wir Ihnen im jeweiligen Online-Fomular, für welchen Zweck wir diese erheben und wie wir sie verarbeiten. Es unterliegt Ihrer freien Entscheidung, ob Sie diese Daten angeben.
-        </p>
-        <h5>Auskunftsrechte</h5>
-        <p class="mb-4">
-          Auskunftsrechte können schriftlich oder per E-Mail gegenüber den im Impressum genannten Stellen geltend gemacht werden. Dies gilt auch für Widersprüche zu einer erteilten Einwilligungserklärung.
-        </p>
-        <h5>Verschlüsselung</h5>
-        <p class="mb-4">
-          Dieses Agebot unterstützt den gesicherten Zugriff über das HTTPS/SSL-Protokoll sowie die Verschlüsselung von E-Mails mit PGP/GnuPG.
-        </p>
+        <h2 class="section-heading text-dark text-center">
+          <a href="impressum.html" class="text-dark">
+            <p class="mb-0">Impressum</p>
+            <i class="fas fa-2x fa-angle-down text-dark sr-icon-2"></i>
+          </a>
+        </h2>
       </div>
     </section>
 
