--- a/impressum.html
+++ b/impressum.html
@@ -10,6 +10,8 @@
 
     <title>Natürlich Entspannt</title>
 
+    <link rel="import" href="/favicons.html"></link>
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
