--- a/impressum.html
+++ b/impressum.html
@@ -35,7 +35,29 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger font-logo" href="index.html#page-top">
-          <img class="navbar-logo" src="img/Logo4_HQ_transparent.gif">
+          <svg class="navbar-logo" version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 367.2 695" style="enable-background:new 0 0 367.2 695;" xml:space="preserve">
+          <path class="logo4-inline" d="M187.1,694.9c-36.3,0-66.8-8-95-24.2c-20.1-11.5-37.2-26.5-51.8-44.8c-14.9-18.6-25.7-39.1-32.5-61.8
+            c-3.6-11.9-5.9-24-7-36.4C0.3,521.5-0.1,515.3,0,509c0.2-13.8,2.1-27.4,5.2-40.8c6.5-28.6,21.3-53.2,37.8-76.9
+            c16.4-23.5,30.9-48.2,44.5-73.4c14.3-26.3,26.8-53.5,38-81.2c12.8-31.8,23.1-64.4,31.7-97.6c4.3-16.7,7.6-33.6,11.5-50.3
+            c3.1-13.3,4.4-27,6.2-40.6c1.9-14.3,3.4-28.6,5.1-42.9c0.3-2.3,0.6-5.2,3.3-5.3c3.1-0.1,3.4,2.6,3.7,5.3c2.9,22.4,4.8,44.8,8.7,67.1
+            c5.1,29.7,12,58.8,19.8,87.9c8.9,33,20.6,65,34,96.3c13.5,31.5,29.3,62,46.8,91.7c13.4,22.8,29.1,44,42.8,66.4
+            c12.2,19.9,20.7,41.2,24.8,64.2c2.5,14,3.9,28.1,2.9,42.3c-1.5,21.5-6.2,42.4-14.7,62.4c-5.1,11.9-11.1,23.3-18.6,33.7
+            c-10.3,14.3-22.3,27.1-36.3,38.2c-13,10.2-26.9,18.6-41.8,25.1c-14.3,6.2-29.3,10.4-44.9,12.5C201.5,694.1,192.5,695.2,187.1,694.9z
+             M29.8,552.1c6.8,27.5,20.9,50.8,40.2,71.1c13.5,14.2,29.7,24.7,47.6,33.1c19.7,9.2,40.4,13.4,61.9,14.6c5.8,0.3,11.5-0.5,17.3-0.7
+            c8.1-0.3,16.1-1.7,23.7-3.7c21.4-5.6,41.1-14.6,59-28.1c13.6-10.3,24.9-22.2,34.6-36c11-15.6,18.7-32.7,23.5-51.1
+            c2.5-9.4,4.2-19.1,4.5-29c0.2-7.4,0.6-14.7,0.1-22.1c-0.7-10.2-2.6-20-5.1-29.8c-5.2-20.5-15-38.8-27.1-55.9
+            c-21.4-30.2-40.3-61.9-57.5-94.6c-12.7-24.1-23.5-49-34-74.1c-5.3-12.7-10.2-25.7-14.3-38.8c-7.4-23.7-15.1-47.2-20.7-72.9
+            c-5.8,26-13.1,50.1-21.2,73.8c-7.4,21.5-15.8,42.6-24.9,63.4c-12.4,28.6-26.5,56.3-42,83.3c-13.1,22.9-27.7,44.8-42.9,66.4
+            c-8.9,12.6-13.9,26.8-15.4,42.1c-1.8,18.5,3.1,35.7,11.6,51.9c6.9,13.2,16,24.9,26.9,35.1c6.4,6,13.4,11.1,20.7,15.6
+            c11.3,6.8,23.5,12,36.4,15c14.7,3.4,29.7,5,44.6,2c20.6-4.2,37.4-14.8,49.5-32.2c7.9-11.3,12.4-24,14-37.5
+            c1.2-10.3-0.3-20.4-5.2-29.6c-6.8-12.7-17.3-21-31.4-24.5c-12.8-3.2-24.2-1.4-33.4,8.7c-8.8,9.6-11.5,29.3,3.3,35.3
+            c5.3,2.1,13.3,1,16.3-3.9c2.8-4.6,0.6-10.7-4-11c-1.7-0.1-3,0.4-3.4,2.1c-0.2,0.7-1.2,1.3-0.1,2.1c1.7,1.3,1.9-1.6,3.2-1.1
+            c0.3,0.1,0.5,0.3,0.8,0.5c-0.5,1.7-0.7,3.4-3.2,3.4c-1.9,0-3.2-0.8-4.2-2.2c-1.3-1.8,0.1-3.2,0.8-4.5c2.4-4.1,7.1-4.6,11-1.5
+            c6.3,5,4.4,15.7-3.6,20.2c-9.3,5.2-22.3,0.9-28-9.9c-8.5-16.2,1.9-38.7,20.6-46.1c10.1-4,20.2-3.1,30.6-0.3
+            c18.6,5.1,30.8,17.2,38.7,33.9c6.5,13.6,6.1,28.4,3,42.7c-5.7,26.6-19.9,47.8-43.1,62.7c-13.3,8.6-27.8,13.4-43.4,14.8
+            c-14.2,1.3-28.5,0-42.3-3.1c-29.2-6.7-54.8-20.6-76.2-41.7c-7.9-7.8-14.9-16.4-21.3-25.6C27.4,540.4,28.3,546.2,29.8,552.1z"/>
+          </svg>
           <span class="align-middle" style="height:30px;">Natürlich Entspannt</span>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,16 +91,15 @@
         <hr class="dark my-4">
         <h4>Herausgeber</h4>
         <p class="mb-4">
-          Praxis für ???</br>
-          Jennifer Ludwig</br>
+          Jenny Ludwig</br>
           Windmühlenstraße 12</br>
           04425 Taucha</br></br>
-          <i class="fas fa-phone text-primary"></i> +49 000 0000</br>
-          <i class="fas fa-mobile-alt text-primary"></i> +49 000 0000</br>
-          <i class="fas fa-at text-primary"></i> jennyludwig79@gmail.com</br>
-          <i class="fas fa-globe text-primary"></i> natürlich-entspannt.de</br></br>
+          <!-- <i class="fas fa-phone text-primary"></i>+49 000 0000</br> -->
+          <i class="fas fa-mobile-alt text-dark" style="width: 16px"></i> +49 178 3092682</br>
+          <i class="fas fa-at text-dark" style="width: 16px"></i> kontakt.natuelich.entspannt@gmail.com</br>
+          <i class="fas fa-globe text-dark" style="width: 16px"></i> www.natürlich-entspannt.de</br></br>
           Berufsbezeichnung: Entspannungstherapeutin</br>
-          Steuernummer: 0/0/0
+          Steuernummer: 237/246/02398
         </p>
 
         <h3>Rechtliche Hinweise</h3>
@@ -98,31 +119,19 @@
         </p>
         <h4>Datenschutz</h4>
         <p class="mb-4">
-          Diese Datenschutzerklärung gilt für das Internet-Angebot natürlich-entspannt.de. Diese ist für die Inhalte dieses Internet-Angebots verantwortlich.
-        </p>
-        <h5>Datenverarbeitung im Auftrag</h5>
-        <p class="mb-4">
-          Dieses Internet-Angebot wird im Wege der Autragsverarbeitung von dem T-Online-Dienst der Deutschen Telekom als technischem Dienstleister vorgehalten. Dabei findet keine über das in dieser Erklärung dargestellte Maß hinausgehende Speicherung und Verarbeitung personenbezogener Nutzungsdaten statt.
-        </p>
-        <h5>Erhebung von Nutzungsdaten/ Nutzungsanalyse</h5>
-        <p class="mb-4">
-          Beim Zugriff auf unser Internetangebot erfassen wir folgende Daten in einer Protokolldatei:
-          <ul>
-            <li>IP-Adresse in anonymisierter Form (jede IP wird nach dem Zufallsprinzip transformiert)</li>
-            <li>Zeitpunkt des Zugriffs</li>
-            <li>aufgerufene Seite bzw. Name der abgerufenen Datei (URL)</li>
-            <li>Status-Informationen (z.B. Fehlercode)</li>
-            <li>übertragene Datenmenge</li>
-            <li>Browser-Informationen (genutzter Web-Browser, Bertiebssystem, Spacheinstellung ect.)</li>
-          </ul>
-          Die Daten werden ausschließlich für statistische Zwecke genutzt. Eine Weitergabe an Dritte erfolgt nicht. Dises Internetangebot verwendet keine Techniken, die darauf abzielen, das Zugriffsverhalten einzelner Nutzer auszuwerten. Personenbezogene Nutzungsprofile werden nicht erstellt.
-        <h5>Cookies</h5>
-        <p class="mb-4">
-          In bestimmten Fällen werden so genannte temporäre Cookies verwendet. Diese enthalten keine personenbezogenen Daten und werden nach Ablauf der Sitzung mit dem Schließen Ihres Web-Browsers automatisch gelöscht.
+          Diese Datenschutzerklärung gilt für das Internet-Angebot www.natürlich-entspannt.de.
+
+          Durch den Besuch des Internetangebotes www.natürlich-entspannt.de werden vom Betreiber keinerlei Daten erhoben oder gespeichert. Dazu zählen insbesondere Protokolldateien ("Logs") und Cookies. Davon ausgenommen sind die folgenden Fälle der Kontaktaufnahme und Datenverarbeitung durch Dritte.
         </p>
         <h5>Erhebung personenbezogener Daten in Online-Formularen</h5>
         <p class="mb-4">
           Soweit wir Sie im Rahmen dieses Angebots um die Angabe personenbezogener Daten bitten (z.B. Name, Anschrift oder E-Mail-Adresse), sagen wir Ihnen im jeweiligen Online-Fomular, für welchen Zweck wir diese erheben und wie wir sie verarbeiten. Es unterliegt Ihrer freien Entscheidung, ob Sie diese Daten angeben.
+        </p>
+        <h5>Datenverarbeitung durch Dritte</h5>
+        <p class="mb-4">
+          Diese Website wird auf Servern von Github Inc., 88 Colin P Kelly Jr St, San Francisco, CA 94107, USA gehostet. Beachten Sie daher auch die GitHub Privacy Policy und GitHub Global Privacy Practices.
+
+          Github verfügt über eine Zertifizierung nach dem EU-US-Privacy-Shield. Der Privacy-Shield ist ein Übereinkommen zwischen der Europäischen Union (EU) und den USA, das die Einhaltung europäischer Datenschutzstandards in den USA gewährleisten soll. Siehe dazu die Privacy Shield Compliance Erklärung von Github.
         </p>
         <h5>Auskunftsrechte</h5>
         <p class="mb-4">
@@ -130,7 +139,7 @@
         </p>
         <h5>Verschlüsselung</h5>
         <p class="mb-4">
-          Dieses Agebot unterstützt den gesicherten Zugriff über das HTTPS/SSL-Protokoll sowie die Verschlüsselung von E-Mails mit PGP/GnuPG.
+          Aus Sicherheitsgründen und zum Schutz der Übertragung vertraulicher Inhalte, die Sie an uns als Seitenbetreiber senden, nutzt unsere Website eine SSL- bzw. TLS-Verschlüsselung. Damit sind Daten, die Sie über diese Website übermitteln, für Dritte nicht mitlesbar. Sie erkennen eine verschlüsselte Verbindung an der "https://" Adresszeile Ihres Browsers.
         </p>
       </div>
     </section>
