--- a/index.html
+++ b/index.html
@@ -35,7 +35,29 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger font-logo" href="#page-top">
-          <img class="navbar-logo" src="img/Logo4_HQ_transparent.gif">
+          <svg class="navbar-logo" version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 367.2 695" style="enable-background:new 0 0 367.2 695;" xml:space="preserve">
+          <path class="logo4-inline" d="M187.1,694.9c-36.3,0-66.8-8-95-24.2c-20.1-11.5-37.2-26.5-51.8-44.8c-14.9-18.6-25.7-39.1-32.5-61.8
+            c-3.6-11.9-5.9-24-7-36.4C0.3,521.5-0.1,515.3,0,509c0.2-13.8,2.1-27.4,5.2-40.8c6.5-28.6,21.3-53.2,37.8-76.9
+            c16.4-23.5,30.9-48.2,44.5-73.4c14.3-26.3,26.8-53.5,38-81.2c12.8-31.8,23.1-64.4,31.7-97.6c4.3-16.7,7.6-33.6,11.5-50.3
+            c3.1-13.3,4.4-27,6.2-40.6c1.9-14.3,3.4-28.6,5.1-42.9c0.3-2.3,0.6-5.2,3.3-5.3c3.1-0.1,3.4,2.6,3.7,5.3c2.9,22.4,4.8,44.8,8.7,67.1
+            c5.1,29.7,12,58.8,19.8,87.9c8.9,33,20.6,65,34,96.3c13.5,31.5,29.3,62,46.8,91.7c13.4,22.8,29.1,44,42.8,66.4
+            c12.2,19.9,20.7,41.2,24.8,64.2c2.5,14,3.9,28.1,2.9,42.3c-1.5,21.5-6.2,42.4-14.7,62.4c-5.1,11.9-11.1,23.3-18.6,33.7
+            c-10.3,14.3-22.3,27.1-36.3,38.2c-13,10.2-26.9,18.6-41.8,25.1c-14.3,6.2-29.3,10.4-44.9,12.5C201.5,694.1,192.5,695.2,187.1,694.9z
+             M29.8,552.1c6.8,27.5,20.9,50.8,40.2,71.1c13.5,14.2,29.7,24.7,47.6,33.1c19.7,9.2,40.4,13.4,61.9,14.6c5.8,0.3,11.5-0.5,17.3-0.7
+            c8.1-0.3,16.1-1.7,23.7-3.7c21.4-5.6,41.1-14.6,59-28.1c13.6-10.3,24.9-22.2,34.6-36c11-15.6,18.7-32.7,23.5-51.1
+            c2.5-9.4,4.2-19.1,4.5-29c0.2-7.4,0.6-14.7,0.1-22.1c-0.7-10.2-2.6-20-5.1-29.8c-5.2-20.5-15-38.8-27.1-55.9
+            c-21.4-30.2-40.3-61.9-57.5-94.6c-12.7-24.1-23.5-49-34-74.1c-5.3-12.7-10.2-25.7-14.3-38.8c-7.4-23.7-15.1-47.2-20.7-72.9
+            c-5.8,26-13.1,50.1-21.2,73.8c-7.4,21.5-15.8,42.6-24.9,63.4c-12.4,28.6-26.5,56.3-42,83.3c-13.1,22.9-27.7,44.8-42.9,66.4
+            c-8.9,12.6-13.9,26.8-15.4,42.1c-1.8,18.5,3.1,35.7,11.6,51.9c6.9,13.2,16,24.9,26.9,35.1c6.4,6,13.4,11.1,20.7,15.6
+            c11.3,6.8,23.5,12,36.4,15c14.7,3.4,29.7,5,44.6,2c20.6-4.2,37.4-14.8,49.5-32.2c7.9-11.3,12.4-24,14-37.5
+            c1.2-10.3-0.3-20.4-5.2-29.6c-6.8-12.7-17.3-21-31.4-24.5c-12.8-3.2-24.2-1.4-33.4,8.7c-8.8,9.6-11.5,29.3,3.3,35.3
+            c5.3,2.1,13.3,1,16.3-3.9c2.8-4.6,0.6-10.7-4-11c-1.7-0.1-3,0.4-3.4,2.1c-0.2,0.7-1.2,1.3-0.1,2.1c1.7,1.3,1.9-1.6,3.2-1.1
+            c0.3,0.1,0.5,0.3,0.8,0.5c-0.5,1.7-0.7,3.4-3.2,3.4c-1.9,0-3.2-0.8-4.2-2.2c-1.3-1.8,0.1-3.2,0.8-4.5c2.4-4.1,7.1-4.6,11-1.5
+            c6.3,5,4.4,15.7-3.6,20.2c-9.3,5.2-22.3,0.9-28-9.9c-8.5-16.2,1.9-38.7,20.6-46.1c10.1-4,20.2-3.1,30.6-0.3
+            c18.6,5.1,30.8,17.2,38.7,33.9c6.5,13.6,6.1,28.4,3,42.7c-5.7,26.6-19.9,47.8-43.1,62.7c-13.3,8.6-27.8,13.4-43.4,14.8
+            c-14.2,1.3-28.5,0-42.3-3.1c-29.2-6.7-54.8-20.6-76.2-41.7c-7.9-7.8-14.9-16.4-21.3-25.6C27.4,540.4,28.3,546.2,29.8,552.1z"/>
+          </svg>
           <span class="align-middle" style="height:30px;">Natürlich Entspannt</span>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,18 +85,17 @@
       </div>
     </nav>
 
-    <header class="masthead text-center text-white d-flex">
+    <header class="masthead text-center text-primary d-flex">
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <img class="masthead-logo" src="img/Logo4_HQ_transparent.gif">
+            <img class="masthead-logo" src="img/Logo4.svg">
             <h1 class="text-uppercase font-logo">
               <strong>Natürlich Entspannt</strong>
             </h1>
             <hr class="lg">
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">hier eine Kurzbeschreibung einfügen</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Angebot</a>
           </div>
         </div>
@@ -85,10 +106,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="section-heading text-dark text-center">Mein Lebenslauf</h2>
+            <h2 class="section-heading text-dark text-center">Vita</h2>
             <hr class="dark my-4">
             <p class="text-faded mb-4"></p>
-            <table class="table table-hover">
+            <table class="table table-hover noborder">
               <tbody>
                 <tr>
                   <th scope="row">1979</th>
@@ -100,14 +121,14 @@
                 </tr>
                 <tr>
                   <th scope="row">2008 - 2009</th>
-                  <td>Wissenschaftliche Mitarbeiter am Institut für Grundschulpädagogik der Universität Leipzig</td>
+                  <td>Wissenschaftliche Mitarbeiterin am Institut für Grundschulpädagogik der Universität Leipzig</td>
                 </tr>
                 <tr>
                   <th scope="row">seit 2009</th>
-                  <td>Arbeit mit Grundschulkindern
+                  <td>Arbeit mit Grundschülern
                     <ul>
                       <li>SchülerInnen mit besonderen Förderbedarfen</li>
-                      <li>Entspannungskurse mit Grundschülern</li>
+                      <li>Entspannungskurs für Grundschülern</li>
                     </ul>
                   </td>
                 </tr>
@@ -141,7 +162,7 @@
             <h2 class="section-heading">Angebote</h2>
             <hr class="my-4">
           <div class="col-lg-12 text-center">
-            <h4>Inhouseschulungen für Pädagogen</h3>
+            <h4>Von Pädagogen für Pädagogen</h3>
           </div>
         </div>
       </div>
@@ -328,9 +349,9 @@
     </section>
   -->
 
-    <section class="bg-dark text-white">
+    <section class="bg-primary">
       <div class="container text-center">
-        <h3 class="mb-3">Sie haben nichts zu ihren Vorstellungen gefunden, bitte sprechen Sie mich an und wir erstellen gemeinsam ein individuelles Angebot für Sie!</h3>
+        <h3 class="mb-3">Sie haben nichts zu ihren Vorstellungen gefunden? Bitte kontaktieren Sie mich und wir erstellen gemeinsam ein individuelles Angebot für Sie!</h3>
         <a class="btn btn-light btn-xl js-scroll-trigger text-center" href="#contact">Kontaktieren</a>
       </div>
     </section>
@@ -341,20 +362,17 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Kontaktieren Sie mich!</h2>
             <hr class="my-4">
-          <!--
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-          -->
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
-            <p>+49 XXX XXXXXXX</p>
+            <p>+49 178 3092682</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="mailto:jennyludwig79@gmail.com">jennyludwig79@gmail.com</a>
+              <a href="mailto:kontakt.natuerlich.entspannt@gmail.com">kontakt.natuerlich.entspannt@gmail.com</a>
             </p>
           </div>
         </div>
@@ -363,7 +381,7 @@
 
     <section class="bg-primary pt-3 pb-1" id="impressum">
       <div class="container">
-        <h2 class="section-heading text-dark text-center">
+        <h2 class="section-heading text-primary text-center">
           <a href="impressum.html" class="text-dark">
             <p class="mb-0">Impressum</p>
             <i class="fas fa-2x fa-angle-down text-dark sr-icon-2"></i>
