--- a/impressum.html
+++ b/impressum.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger font-logo" href="index.html#page-top">
-          <img class="navbar-logo" src="img/Logo3.jpg">
+          <img class="navbar-logo" src="img/Logo4_HQ_transparent.gif">
           <span class="align-middle" style="height:30px;">Natürlich Entspannt</span>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
