--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger font-logo" href="#page-top">
-          <img class="navbar-logo" src="img/Logo3.jpg">
+          <img class="navbar-logo" src="img/Logo4_HQ_transparent.gif">
           <span class="align-middle" style="height:30px;">Natürlich Entspannt</span>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,6 +65,7 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
+            <img class="masthead-logo" src="img/Logo4_HQ_transparent.gif">
             <h1 class="text-uppercase font-logo">
               <strong>Natürlich Entspannt</strong>
             </h1>
@@ -78,7 +79,7 @@
       </div>
     </header>
 
-    <section class="bg-primary textured" id="about">
+    <section class="bg-primary" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
