requested changes (see email 2018-10-09)   * change font   * change color   * fix typos   * fix navbar color impressum   * add photo   * enlarge text   * uppercase headings

--- a/impressum.html
+++ b/impressum.html
@@ -10,7 +10,14 @@
 
     <title>Natürlich Entspannt</title>
 
-    <link rel="import" href="/favicons.html"></link>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#80fe01">
+    <meta name="msapplication-TileColor" content="#80fe01">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,6 +34,21 @@
     <!--<link href="css/creative.css" rel="stylesheet">-->
     <link href="css/creative.min.css" rel="stylesheet">
 
+    <!-- Override navbar link color for default background color -->
+    <style type="text/css">
+    @media (min-width: 992px) {
+      #mainNav .navbar-nav > li.nav-item > a.nav-link.active,
+      #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
+        color: #fff !important;
+        background-color: transparent;
+      }
+      #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link.active,
+      #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus.active {
+        color: #93DC00 !important;
+        background-color: transparent;
+      }
+    }
+    </style>
   </head>
 
   <body id="page-top">
@@ -96,7 +118,7 @@
           04425 Taucha</br></br>
           <!-- <i class="fas fa-phone text-primary"></i>+49 000 0000</br> -->
           <i class="fas fa-mobile-alt text-dark" style="width: 16px"></i> +49 178 3092682</br>
-          <i class="fas fa-at text-dark" style="width: 16px"></i> kontakt.natuelich.entspannt@gmail.com</br>
+          <i class="fas fa-at text-dark" style="width: 16px"></i> kontakt.natuerlich.entspannt@gmail.com</br>
           <i class="fas fa-globe text-dark" style="width: 16px"></i> www.natürlich-entspannt.de</br></br>
           Berufsbezeichnung: Entspannungstherapeutin</br>
           Steuernummer: 237/246/02398
@@ -115,7 +137,7 @@
         </p>
         <h4>Urheberrecht</h4>
         <p class="mb-4">
-          Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+          Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
         </p>
         <h4>Datenschutz</h4>
         <p class="mb-4">
@@ -125,7 +147,7 @@
         </p>
         <h5>Erhebung personenbezogener Daten in Online-Formularen</h5>
         <p class="mb-4">
-          Soweit wir Sie im Rahmen dieses Angebots um die Angabe personenbezogener Daten bitten (z.B. Name, Anschrift oder E-Mail-Adresse), sagen wir Ihnen im jeweiligen Online-Fomular, für welchen Zweck wir diese erheben und wie wir sie verarbeiten. Es unterliegt Ihrer freien Entscheidung, ob Sie diese Daten angeben.
+          Soweit wir Sie im Rahmen dieses Angebots um die Angabe personenbezogener Daten bitten (z.B. Name, Anschrift oder E-Mail-Adresse), sagen wir Ihnen im jeweiligen Online-Formular, für welchen Zweck wir diese erheben und wie wir sie verarbeiten. Es unterliegt Ihrer freien Entscheidung, ob Sie diese Daten angeben.
         </p>
         <h5>Datenverarbeitung durch Dritte</h5>
         <p class="mb-4">
