--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
     <title>Natürlich Entspannt</title>
 
-    <link rel="import" href="/favicons.html"></link>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#80fe01">
+    <meta name="msapplication-TileColor" content="#80fe01">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -108,7 +115,14 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="section-heading text-dark text-center">Vita</h2>
             <hr class="dark my-4">
-            <p class="text-faded mb-4"></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 mx-auto">
+            <!-- <p class="text-faded mb-4"></p> -->
+            <img class="photo" src="/img/Foto.jpg"></img>
+          </div>
+          <div class="col-lg-9 mx-auto">
             <table class="table table-hover noborder">
               <tbody>
                 <tr>
@@ -127,8 +141,8 @@
                   <th scope="row">seit 2009</th>
                   <td>Arbeit mit Grundschülern
                     <ul>
-                      <li>SchülerInnen mit besonderen Förderbedarfen</li>
-                      <li>Entspannungskurs für Grundschülern</li>
+                      <li>SchülerInnen mit besonderem Förderbedarf</li>
+                      <li>Entspannungskurs für Grundschüler</li>
                     </ul>
                   </td>
                 </tr>
@@ -149,7 +163,6 @@
                 </tr>
               </tbody>
             </table>
-            <!--<a class="btn btn-light btn-xl js-scroll-trigger text-center" href="#services">Get Started!</a>-->
           </div>
         </div>
       </div>
@@ -351,7 +364,7 @@
 
     <section class="bg-primary">
       <div class="container text-center">
-        <h3 class="mb-3">Sie haben nichts zu ihren Vorstellungen gefunden? Bitte kontaktieren Sie mich und wir erstellen gemeinsam ein individuelles Angebot für Sie!</h3>
+        <h3 class="mb-3">Sie haben nichts zu Ihren Vorstellungen gefunden? Bitte kontaktieren Sie mich und wir erstellen gemeinsam ein individuelles Angebot für Sie!</h3>
         <a class="btn btn-light btn-xl js-scroll-trigger text-center" href="#contact">Kontaktieren</a>
       </div>
     </section>
@@ -372,7 +385,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="mailto:kontakt.natuerlich.entspannt@gmail.com">kontakt.natuerlich.entspannt@gmail.com</a>
+              <a class="email" href="mailto:kontakt.natuerlich.entspannt@gmail.com">kontakt.natuerlich.entspannt@gmail.com</a>
             </p>
           </div>
         </div>
