--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- Custom styles for this template -->
     <!--<link href="css/creative.css" rel="stylesheet">-->
     <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/override.min.css" rel="stylesheet">
 
   </head>
 
